<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Finder</string>
    <string name="action_settings">Settings</string>
    <string name="food_name">Enter Food</string>
    <string name="city_name">City</string>
    <string name="state_name">State</string>
    <string name="enter_button">Enter</string>
    <string name="clear_button">Clear</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="ok">OK</string>
    <string name="missing_input">Please enter a food</string>
    <string name="row_restaurant_button">Find</string>
    <string name="row_web_button">Web</string>
    <string name="yahoo_food_URL">http://search.yahoo.com/search;_ylt=A0oG7l7PeB5P3G0AKASl87UF?p=</string>
    <string name="average_rating">Average Review: </string>
    <string name="total_ratings">Total Reviews: </string>
    <string name="address">Address: </string>
    <string name="restaurant_city">City: </string>
    <string name="restaurant_state">State</string>
    <string name="phone_number">Phone: </string>
    <string name="website_url">Website: </string>
    <string name="last_review">Latest Review: </string>
    <string name="title_restaurant_info_activity">Restaurant Info</string>
    
    
    
    

</resources>
