<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/averageRatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/average_rating" 
            android:layout_weight="1" />

        <TextView
            android:id="@+id/totalRatingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_ratings" 
            android:layout_weight="1" />

    </TableRow>
    
     <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_city"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_state"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/websiteUrlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website_url"
            android:layout_weight="1" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/lastReviewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_review"
            android:layout_weight="1" />

       

    </TableRow>

    

</TableLayout>
    
